packages/language/src/__tests__/__fixtures__/invalid/negative-times.eligian
// Test fixture: Negative times (T039)
// Should trigger validation error: "Timeline event time cannot be negative"

timeline "test" using raf {
  // Negative start time
  at -5s..10s [
    selectElement("#element1")
    addClass("visible")
  ] [
    removeClass("visible")
  ]

  // Negative end time
  at 0s..-5s [
    selectElement("#element2")
    addClass("visible")
  ] [
    removeClass("visible")
  ]

  // Both negative
  at -10s..-5s [
    selectElement("#element3")
    addClass("visible")
  ] [
    removeClass("visible")
  ]
}
